Feat: Catching API Errors

--- a/index.html
+++ b/index.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Website</title>
     <style>
-        #form{
+        #form {
             width: 200px;
             margin: auto;
         }
-        #form > input:nth-child(3){
+
+        #form>input:nth-child(3) {
             margin-left: 50px;
         }
-        #movie{
+
+        #movie {
             width: 300px;
             margin: auto;
         }
+        .errorImage{
+            width: 250px;
+            height: 250px;
+        }
     </style>
 </head>
+
 <body>
     <form id="form">
-        <input type="text"  id="title">
+        <input type="text" id="title">
         <p></p>
         <input type="submit" value="Get Movie">
         <p></p>
@@ -30,35 +38,56 @@
 
     </div>
     <script type="text/javascript">
-        window.addEventListener("load",function(){
+        window.addEventListener("load", function () {
             var form = document.getElementById("form");
-            form.addEventListener("submit",handleSearch)
+            form.addEventListener("submit", handleSearch)
         })
-        function getMovie(title){
+
+        function getMovie(title) {
             return fetch(`http://www.omdbapi.com/?t=${title}&apikey=18122219`)
-            .then((res)=> res.json())
+                .then((res) => res.json())
+                .catch((res)=>res)
         }
-        function handleSearch(e){
+        const div = document.getElementById("movie");
+
+        function handleError() {
+            div.innerHTML = "";
+            const img = document.createElement("img");
+            img.className = "errorImage"
+            img.src = "https://cdn.dribbble.com/users/2469324/screenshots/6538803/comp_3.gif";
+            div.append(img)
+        }
+
+        function handleSearch(e) {
             e.preventDefault();
             const title = document.getElementById("title").value;
             getMovie(title)
-            .then(function(res){
-                const div = document.getElementById("movie");
-                div.innerHTML = "";
-                const img = document.createElement("img");
-                const titleEle = document.createElement("h4");
-                const releaseDate = document.createElement("p");
-                const genre = document.createElement("p");
-                const imdbRating = document.createElement("p");
-                img.src = res.Poster;
-                titleEle.textContent = "Movie Name : " +res.Title;
-                releaseDate.textContent = "Release Date : " +res.Released;
-                genre.textContent = "Genre : "+res.Genre;
-                imdbRating.textContent = "IMDB Rating : " +res.imdbRating;
-                div.append(img,titleEle,releaseDate,genre,imdbRating)
-            })
+                .then(function (res) {
+                    console.log(res);
+                    if(res.Response === "False"){
+                        handleError();
+                    }
+                    else{
+                        div.innerHTML = "";
+                        const img = document.createElement("img");
+                        const titleEle = document.createElement("h4");
+                        const releaseDate = document.createElement("p");
+                        const genre = document.createElement("p");
+                        const imdbRating = document.createElement("p");
+                        img.src = res.Poster;
+                        titleEle.textContent = "Movie Name : " + res.Title;
+                        releaseDate.textContent = "Release Date : " + res.Released;
+                        genre.textContent = "Genre : " + res.Genre;
+                        imdbRating.textContent = "IMDB Rating : " + res.imdbRating;
+                        div.append(img,titleEle,releaseDate,genre,imdbRating)
+                    }
+                })
+                .catch((err) => {
+                    console.log(err);
+                })
         }
         // handleSearch();
     </script>
 </body>
+
 </html>
